force-app/main/default/objects/Speaker__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>Name of the company the event&apos;s speaker is worikng in.</description>
    <inlineHelpText>Company name</inlineHelpText>
    <label>Company</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>